// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test InputLightbox should render correctly when type is file 1`] = `
<div>
  <div>
    Dummy Modal
    <p>
      props: 
      {"open":true,"centered":true,"title":"Firmware upload (*.bin / *.fxfw)","cancelText":"Resolution","okText":"UPLOAD","okButtonProps":{"disabled":true}}
    </p>
    <div>
      Dummy Form
      <p>
        header
      </p>
      <div>
        Dummy FormItem
        <p>
          props: 
          {}
        </p>
        <div>
          Dummy Input
          <p>
            props: 
            {"type":"file","defaultValue":"","autoFocus":true,"maxLength":100}
          </p>
          <p>
            ref: 
            {}
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test InputLightbox should render correctly when type is password 1`] = `
<div>
  <div>
    Dummy Modal
    <p>
      props: 
      {"open":true,"centered":true,"title":"ABCDE requires a password","cancelText":"Resolution","okText":"CONNECT","okButtonProps":{"disabled":true}}
    </p>
    <div>
      Dummy Form
      <p>
        Password
      </p>
      <div>
        Dummy FormItem
        <p>
          props: 
          {}
        </p>
        <div>
          Dummy Input
          <p>
            props: 
            {"type":"password","defaultValue":"","autoFocus":true,"maxLength":100}
          </p>
          <p>
            ref: 
            {}
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
